--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="head-home">
         <div class="header-top">
             <div class="log-search">
                 <img src="./images/logo.svg" class="logo">
