--- a/views/register.html
+++ b/views/register.html
@@ -11,21 +11,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
-<body>
-    <input type="text" placeholder="Nombre y apellido">
-    <input type="text" placeholder="Nombre de usuario">
-    <input type="text" placeholder="E-mail">
+<body class="register">
+    <div class="register-first">
+        <input type="text" placeholder="Nombre y apellido" class="register-input">
+    </div>
+    <div class="register-first">
+        <input type="text" placeholder="Nombre de usuario" class="register-input">
+    </div>
+    <div class="register-first">
+        <input type="text" placeholder="E-mail" class="register-input">
+    </div>
     <h2>Fecha de nacimiento</h2>
-    <input type="date">
-    <input type="text" placeholder="Domicilio">
+    <div class="register-first">
+        <input type="date" class="register-input">
+    </div>
+    <div class="register-first">
+        <input type="text" placeholder="Domicilio" class="register-input">
+    </div>
     <h2>Perfil de usuario</h2>
-    <label>Comprador    </label><input type="radio">
-    <label>Vendedor    </label><input type="radio">
+    <div class="register-radio">
+        
+        <label>Comprador    </label><input type="radio">
+        <label>Vendedor    </label><input type="radio">
+    </div>
     <h2>Intereses</h2>
-    <label>Electro    </label><input type="checkbox">
-    <label>Moda    </label><input type="checkbox">
-    <label>Hogar    </label><input type="checkbox">
-    <label>Jugueteria    </label><input type="checkbox">
-    <label>Vida sana    </label><input type="checkbox">
+    <div class="register-checkbox">
+        <input type="checkbox"><label>      Electro</label>
+    </div>
+    <div class="register-checkbox">
+        <input type="checkbox"><label>      Moda</label>
+    </div>
+    <div class="register-checkbox">
+        <input type="checkbox"><label>      Hogar</label>
+    </div>
+    <div class="register-checkbox">
+        <input type="checkbox"><label>      Jugueteria</label>
+    </div>
+    <div class="register-checkbox">
+        <input type="checkbox"><label>      Vida sana</label>
+    </div>
+    <div class="register-first">
+        <button type="submit" class="log-button">Enviar</button>
+    </div>
+</div>
 </body>
 </html>
