correccion boton enviar

--- a/views/login.html
+++ b/views/login.html
@@ -49,7 +49,7 @@
             <input type="text" placeholder="Elegí tu contraseña" class="register-input">
         </div>
         <div class="register-first">
-            <button type="submit" class="log-button">Enviar</button>
+            <a href="/"><button type="submit" class="log-button">Enviar</button></a>
         </div>
     </div>
     <footer>
