--- a/views/register.html
+++ b/views/register.html
@@ -51,7 +51,7 @@
         <input type="checkbox"><label>      Vida sana</label>
     </div>
     <div class="register-first">
-        <button type="submit" class="log-button">Enviar</button>
+        <a href="/"><button type="submit" class="log-button">Enviar</button></a>
     </div>
 </div>
 </body>
