--- a/views/home.html
+++ b/views/home.html
@@ -42,87 +42,95 @@
             </ul>
         </nav>
     </header>
-    <div>
-        <img src="./images/banner.jpg" class="banner">
-    </div>      
+    <section>
+        <img src="./images/banner.jpg" id="banner">
+    </section>      
     <main>
-        <section>
-            <h2>Basado en tu última visita</h2>
-            <article>
-                <img src="./images/cafetera.jpg">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$6.770</h4>
-                    <h5>40% off</h5>
-                </div>
-                <h6>Cafetera Moulinex</h6>
-            </article>
-            <article>
-                <img src="./images/macbook.jpg">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$230.000</h4>
-                    <h5>20% off</h5></div>
-                </div>
-                <h6>MacBook Pro 2019</h6>
-            </article>
-            <article>
-                <img src="./images/s10.jpg">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$70.500</h4>
-                    <h5>10% off</h5>
-                </div>
-                <h6>Samsung Galaxy S10</h6>
-            </article>
-            <article>
-                <img src="./images/smart.jpg">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$23.200</h4>
-                    <h5>5% off</h5>
-                </div>
-                <h6>SmartTv Samsung 43"</h6>
-            </article>
+        <h2>Basado en tu última visita</h2>
+        <section class="article-section1">
+            <section class="article-section2">
+                <article>
+                    <img src="./images/cafetera.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$6.770</h4>
+                        <h5>40% off</h5>
+                    </div>
+                    <h6>Cafetera Moulinex</h6>
+                </article>
+                <article>
+                    <img src="./images/macbook.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$230.000</h4>
+                        <h5>20% off</h5></div>
+                    </div>
+                    <h6>MacBook Pro 2019</h6>
+                </article>
+            </section>
+            <section class="article-section2">
+                <article>
+                    <img src="./images/s10.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$70.500</h4>
+                        <h5>10% off</h5>
+                    </div>
+                    <h6>Samsung Galaxy S10</h6>
+                </article>
+                <article>
+                    <img src="./images/smart.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$23.200</h4>
+                        <h5>5% off</h5>
+                    </div>
+                    <h6>SmartTv Samsung 43"</h6>
+                </article>
+            </section>
         </section>
-        <section>
-            <h2>Sección de Ofertas</h2>
-            <article>
-                <img src="./images/cafetera.jpg" class="image-article">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$6.770</h4>
-                    <h5>40% off</h5>
-                </div>
-                <h6>Cafetera Moulinex</h6>
-            </article>
-            <article>
-                <img src="./images/macbook.jpg">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$230.000</h4>
-                    <h5>20% off</h5>
-                </div>
-                <h6>MacBook Pro 2019</h6>
-            </article>
-            <article>
-                <img src="./images/s10.jpg">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$70.500</h4>
-                    <h5>10% off</h5>
-                </div>
-                <h6>Samsung Galaxy S10<h6>
-            </article>
-            <article>    
-                <img src="./images/smart.jpg">
-                <h5><i class="fas fa-truck" id="shipp"></i></h5>
-                <div id="precio">
-                    <h4>$23.200</h4>
-                    <h5>5% off</h5>
-                </div>
-                <h6>SmartTv Samsung 43"<h6>
-            </article>
+        <h2>Sección de Ofertas</h2>
+        <section class="article-section1">
+            <section class="article-section2">
+                <article>
+                    <img src="./images/cafetera.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$6.770</h4>
+                        <h5>40% off</h5>
+                    </div>
+                    <h6>Cafetera Moulinex</h6>
+                </article>
+                <article>
+                    <img src="./images/macbook.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$230.000</h4>
+                        <h5>20% off</h5>
+                    </div>
+                    <h6>MacBook Pro 2019</h6>
+                </article>
+            </section>
+            <section class="article-section2">
+                <article>
+                    <img src="./images/s10.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$70.500</h4>
+                        <h5>10% off</h5>
+                    </div>
+                    <h6>Samsung Galaxy S10<h6>
+                </article>
+                <article>    
+                    <img src="./images/smart.jpg" class="image-article">
+                    <h5><i class="fas fa-truck" id="shipp"></i></h5>
+                    <div id="precio">
+                        <h4>$23.200</h4>
+                        <h5>5% off</h5>
+                    </div>
+                    <h6>SmartTv Samsung 43"<h6>
+                </article>
+            </section>
         </section>
     </main>
     <footer>
