--- a/views/login.html
+++ b/views/login.html
@@ -46,7 +46,7 @@
             <input type="text" placeholder="Nombre de usuario" class="register-input">
         </div>
         <div class="register-first">
-            <input type="text" placeholder="Elegí tu contraseña" class="register-input">
+            <input type="password" placeholder="Elegí tu contraseña" class="register-input">
         </div>
         <div class="register-first">
             <a href="/"><button type="submit" class="log-button">Enviar</button></a>
