--- a/views/register.html
+++ b/views/register.html
@@ -19,7 +19,7 @@
         <input type="text" placeholder="Nombre de usuario" class="register-input">
     </div>
     <div class="register-first">
-        <input type="text" placeholder="E-mail" class="register-input">
+        <input type="email" placeholder="E-mail" class="register-input">
     </div>
     <h2>Fecha de nacimiento</h2>
     <div class="register-first">
