coreccion login y register

--- a/views/register.html
+++ b/views/register.html
@@ -16,7 +16,13 @@
         <input type="text" placeholder="Nombre y apellido" class="register-input">
     </div>
     <div class="register-first">
-        <input type="text" placeholder="Nombre de usuario" class="register-input">
+        <input type="text" placeholder="Nombre de usuari@" class="register-input">
+    </div>
+    <div class="register-first">
+        <input type="password" placeholder="Contraseña" class="register-input">
+    </div>
+    <div class="register-first">
+        <input type="password" placeholder="Confirmar contraseña" class="register-input">
     </div>
     <div class="register-first">
         <input type="email" placeholder="E-mail" class="register-input">
@@ -52,6 +58,9 @@
     </div>
     <div class="register-first">
         <a href="/"><button type="submit" class="log-button">Enviar</button></a>
+    </div>
+    <div class="register-first">
+        <a href="/register"><button type="reset" class="log-button">Borrar datos</button></a>
     </div>
 </div>
 </body>
