--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -141,6 +141,8 @@ footer{
     background-color: #1259c3;
     border-radius: 3px;
     width: 100%;
+    color: white;
+    font-weight: bold;
 }
 
 /*css register.html*/
